--- a/css/biografia.css
+++ b/css/biografia.css
@@ -205,3 +205,19 @@
         height: 200px;
     }
 }
+
+
+
+/*---------5. Contact-------------*/
+@media (max-width: 768px) {
+    .sidebar {
+        display: none;
+    }
+    .content {
+        width: 100%;
+    }
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
